force-app/main/default/objects/All_Images__c/All_Images__c.object-meta.xml
<CustomObject>
    <label>All Image</label>
    <nameField>
        <displayFormat>IMG-{0}</displayFormat>
        <label>All Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>