force-app/main/default/objects/All_Images__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(ImageURL__c  ,&apos;ERROR&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Images</label>
    <type>Text</type>
</CustomField>