force-app/main/default/objects/All_Images__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>All Images</relationshipLabel>
    <relationshipName>All_Images</relationshipName>
    <type>Lookup</type>
</CustomField>